[package]
name = "artofus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
axum = "^0.6"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "postgres", "sqlite", "uuid", "json" ] }
uuid = { version = "1.3.2", features = [ "v7", "fast-rng", "macro-diagnostics", "serde", ] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"

#[wit-dependencies]
#wasi = "1.0"