[package]
name = "artofus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "artofus"
path = "src/lib.rs"

[[bin]]
name = "api_server"
path = "src/main.rs"

[dependencies]
axum = "^0.6"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
cornucopia_async = { version = "0.4.0", features = ["with-serde_json-1", ] }
deadpool-postgres = "*"
serde = { version = "1", features = ["derive", ] }
serde_json = { version = "1" }
#sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "chrono", "postgres", "sqlite", "uuid", "json" ] }
tokio = { version = "1", features = ["full"]}
uuid = { version = "1.3", features = [ "v7", "fast-rng", "macro-diagnostics", "serde", ] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"

#[wit-dependencies]
#wasi = "1.0"