[package]
name = "artofus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "appcore"
path = "src/lib.rs"

[[bin]]
name = "api_server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "^0.6"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
once_cell = "1.13.0"
serde = { version = "1", features = ["derive", ] }
serde_json = { version = "1" }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "chrono", "postgres", "sqlite", "uuid", "json" ] }
tokio = { version = "1", features = ["full"]}
thiserror = "1.0.31"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.3", features = [ "v7", "fast-rng", "macro-diagnostics", "serde", ] }
validator = { version = "0.16.0", features = ["derive"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"

#[wit-dependencies]
#wasi = "1.0"